styles/style.css
body {
    font-family: arial, sans-serif;
}

main {
    display: block;
    margin: auto;
}

.logo-wrapper {
    text-align: center;
    margin-left: auto;
    margin-right: auto;
    padding-top: 9rem;
}

.center-image {
    text-align: center;
    /* 109 / 16 = 6.8125 */
    /* 92 / 16 = 5.75 */
    height: 5.75rem;
    /* 272 / 16 = 17 */
    width: 17rem;
}

.search-wrapper {
    display: block;
    margin: 1.25rem auto;
    width: 36.375rem;
    border: 0.0625rem solid #dfe1e5;
    box-shadow: none;
    border-radius: 1.5rem;
    height: 2.75rem;
    padding-top: 0.375rem;
}

.search-bar {
    background-color: transparent;
    border: none;
    padding: 0;
    outline: none;
    white-space: pre;
    margin-left: 2.3125rem;
    font-size: 1rem;
    /* 34 / 16 = 2.125. */
    line-height: 2.125rem;
    height: 2.125rem;
}

img {
    max-width: 100%;
    height: auto;
}

ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
}

.left-nav-bar li {
    float: left;
}

.right-nav-bar li {
    float: right;
}

.left-nav-bar a {
    display: block;
    /* 60 / 16 */
    color: #000;
    font-family: arial, sans-serif;
    text-decoration: none;
    /* 13 / 16 */
    font-size: 0.8125rem;
    padding-left: 0.9375rem;
    opacity: 0.75;
}

.right-nav-bar a {
    display: block;
    /* 60 / 16 */
    color: rgb(0, 0, 0);
    font-family: arial, sans-serif;
    text-decoration: none;
    /* 13 / 16 */
    font-size: 0.8125rem;
    padding-right: 0.9375rem;
    opacity: 0.75;

    /* 24 / 16 = 1.5 */
    line-height: 1.5rem;
    outline: none;
    text-align: right;
    white-space: nowrap;
    text-align: right;
}

.menu-img {
    height: 1.8rem;
    width: 1.8rem;
    opacity: .55;
    padding-right: 0.9375rem;
}

#sign-in-btn {
    border: 1px solid #4285f4;
    text-decoration: none;
    outline: none;
    font-weight: bold;
    cursor: default;
    background: #4285f4;
    display: inline-block;
    line-height: 1.75rem;
    padding: 0 0.75rem;
    font-size: 0.8125rem;
    text-align: left;
    white-space: nowrap;
    border-radius: 0.125rem;
    color: #fff;
    padding-right: 0.9375rem;
}

.search-btn {
    text-align: center;
    background-color: #f2f2f2;
    border: .0625rem solid #f2f2f2;
    border-radius: 0.25rem;
    color: #5F6368;
    font-family: arial, sans-serif;
    font-size: 0.875rem;
    margin: 0.6875rem 0.25rem;
    padding: 0 1rem;
    line-height: 1.6875rem;
    height: 2.25rem;
    min-width: 3.375rem;
    text-align: center;
    cursor: pointer;
}

.search-btn:hover {
    box-shadow: 0 0.0625rem 0.0625rem rgba(0, 0, 0, 0.1);
    background-color: #f8f8f8;
    border: 0.0625rem solid #c6c6c6;
    color: #222;
}

.buttons {
    height: 4.375rem;
    padding-top: 0rem;
    text-align: center;
}

.footer {
    display: block;
    position: fixed;
    bottom: 0;
    width: 100%;
    height: 2.1875rem;
    margin: 0 auto;
    background: #f2f2f2;
    line-height: 2.5rem;
    border: 0.0625rem solid #e4e4e4;
}

.footer-left a {
    display: block;
    /* 60 / 16 */
    color: #000;
    font-family: arial, sans-serif;
    text-decoration: none;
    /* 13 / 16 */
    font-size: 0.8125rem;
    padding-left: 0.9375rem;
    opacity: 0.75;
}

.footer-right a {
    display: block;
    /* 60 / 16 */
    color: rgb(0, 0, 0);
    font-family: arial, sans-serif;
    text-decoration: none;
    /* 13 / 16 */
    font-size: 0.8125rem;
    padding-right: 0.9375rem;
    opacity: 0.75;
    
    /* 24 / 16 = 1.5 */
    outline: none;
    text-align: right;
    white-space: nowrap;
    text-align: right;   
}

.footer-left li {
    float: left;
}

.footer-right li {
    float: right;
}

a:hover {
    text-decoration: underline;
}

